--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --cyan: #0DCAF0;
+}
+body {
+    background-image: url("/assets/img/fondo1920.jpg");
+    background-attachment: fixed;
+    font-family: Garamond, 'Times New Roman', serif;
+    font-size: 13pt;
+    margin: 0;
+    padding: 0;
+}
+@media (min-width: 1921px) {
+    body {
+        background-image: url("/assets/img/fondo2400.jpg");
+    }
+}
+@media (max-width: 640px) {
+    body {
+        background-image: url("/assets/img/fondo640.jpg");
+    }
+}
+.row {
+    margin: 0;
+}
+section {
+    padding: 50px 2%;
+}
+h1, h2 {
+    font-family: 'Amita', 'Brush Script MT', cursive;
+}
+h2 {
+    text-align: center;
+    margin-bottom: 0.7em;
+}
+h4 {
+    font-weight: bold;
+}
