--- a/src/app/c/process/process.component.html
+++ b/src/app/c/process/process.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
         <div class="pasos col-6 col-sm-5 col-md-3">
             <h4>1</h4>
-            <p>Me mandas tu texto a laplumaglauca@gmail.com.</p>
+            <p>Me mandas tu texto por <a href="#contacto">aquí</a>.</p>
         </div>
         <div class="pasos col-6 col-sm-5 col-md-3">
             <h4>2</h4>
@@ -11,15 +11,15 @@
         </div>
         <div class="pasos col-6 col-sm-5 col-md-3">
             <h4>3</h4>
-            <p></p>
+            <p>Corrijo y/o maqueto el texto.</p>
         </div>
         <div class="pasos col-6 col-sm-5 col-md-3">
             <h4>4</h4>
-            <p></p>
+            <p>Te envío el trabajo terminado para que lo revises y apruebes.</p>
         </div>
         <div class="pasos col-6 col-sm-5 col-md-3">
             <h4>5</h4>
-            <p></p>
+            <p>Pagas 50% al iniciar y el resto al recibir el trabajo terminado.</p>
         </div>
     </div>
 </section>
