--- a/src/app/c/why/why.component.html
+++ b/src/app/c/why/why.component.html
@@ -1,7 +1,7 @@
 <section id="por-qué">
     <h2>¿Por qué necesitas un corrector de estilo?</h2>
     <div class="row">
-    <div class="col d-none d-sm-flex d-md-flex justify-content-center">
+    <div class="col d-none d-sm-flex d-md-flex justify-content-center align-content-center">
         <img class="plumas" src="/assets/img/plumas200.png"></div>
     <div class="col">
         <p>Cuando escribes una historia, es habitual que cometas pequeños errores. Ocurre tanto por desconocimiento de las normas como por tipear apasionadamente, o incluso por editar varias veces la misma escena para que quede perfecta. Algunos serán eliminados en una relectura; otros, por el autocorrector de Word; pero corres el riesgo de que algunos errores lleguen a tus lectores.</p>
