--- a/src/app/c/navbar/navbar.component.html
+++ b/src/app/c/navbar/navbar.component.html
@@ -20,7 +20,7 @@
             <a href="#servicios">Servicios</a>
           </li>
           <li>
-            <a href="#!">Contacto</a>
+            <a href="#contacto">Contacto</a>
           </li>
         </ul>
       </div>
